@@ -2,6 +2,7 @@ xxxx-xx-xx    3.0.1
 -------------------
    * FIXED ERRORS:
    * NEW ADDED:
+      - Example25IsInstanceVsLenTuple
       - Example26IfVsTryGetDictValue.py
       
    * UPDATED, IMPROVEMENTS:
